Bug #9901
ip: rts_wput_other: this statement may fall through
Start date:
2018-10-16
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build with gcc 8 did reveal this issue:
../../common/inet/ip/rts.c: In function 'rts_wput_other': ../../common/inet/ip/rts.c:1051:3: error: this statement may fall through [-Werror=implicit-fallthrough=] switch (iocp->ioc_cmd) { ^~~~~~ ../../common/inet/ip/rts.c:1066:2: note: here case M_IOCDATA: ^~~~ cc1: all warnings being treated as errors
Apparently this is about missing break statement, and the problem is hidden by rts_wput_iocdata() where we end up calling ip_wput_nondata() anyhow. Nevertheless, we should break from switch and not fall through the M_IOCDATA case.
Related issues
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a4ea78ea169e38e19fc3f41157c40f09341f4144
commit a4ea78ea169e38e19fc3f41157c40f09341f4144 Author: Toomas Soome <tsoome@me.com> Date: 2018-11-08T21:55:13.000Z 9901 ip: rts_wput_other: this statement may fall through Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Dan McDonald <danmcd@joyent.com> Approved by: Garrett D'Amore <garrett@damore.org>