9901 ip: rts_wput_other: this statement may fall through Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Dan McDonald <danmcd@joyent.com> Approved by: Garrett D'Amore <garrett@damore.org>